// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Viser alle options også når valgt
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist7"
      popovertarget=":u-datalist7"
      aria-autocomplete="list"
      aria-controls=":u-datalist7"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Viser alle options også når valgt"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<removed>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Controlled Independent Label Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg person
  </label>
  <ds-suggestion>
    <data
      value="#004"
      aria-label="Lars, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Lars
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist4"
      popovertarget=":u-datalist4"
      aria-autocomplete="list"
      aria-controls=":u-datalist4"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Velg person"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        label="Lars"
        value="#004"
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<removed>"
        aria-hidden="false"
      >
        Lars
      </u-option>
      <u-option
        label="James"
        value="#007"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        James
      </u-option>
      <u-option
        label="Nina"
        value="#113"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Nina
      </u-option>
      <u-option
        label="Tove"
        value="#110"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Tove
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<div style="<removed>">
  Valgt person:
  <pre style="<removed>">
    {"label":"Lars","value":"#004"}
  </pre>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Sett Nina
</button>
`;

exports[`Controlled Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjoner
  </label>
  <ds-suggestion data-multiple>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <data
      value="Stavanger"
      aria-label="Stavanger, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Stavanger
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      aria-description="Navigate left to find 2 selected"
      list=":u-datalist3"
      popovertarget=":u-datalist3"
    >
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      hidden
      tabindex="-1"
      aria-multiselectable="true"
      id="<removed>"
      data-is-floating="true"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<removed>"
        selected
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<removed>"
        selected
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p
  data-variant="default"
  style="<removed>"
>
  Valgte reisemål: Sogndal, Stavanger
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Single 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist2"
      popovertarget=":u-datalist2"
    >
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      hidden
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<removed>"
        selected
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p
  data-variant="default"
  style="<removed>"
>
  Valgte reisemål: Sogndal
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist5"
      popovertarget=":u-datalist5"
      aria-autocomplete="list"
      aria-controls=":u-datalist5"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Skriv inn et tall mellom 1-6"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        value="sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        value="brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        value="lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 2 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist6"
      popovertarget=":u-datalist6"
      aria-autocomplete="list"
      aria-controls=":u-datalist6"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Skriv inn et tall mellom 1-6"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Default Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist10"
      popovertarget=":u-datalist10"
      aria-autocomplete="list"
      aria-controls=":u-datalist10"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<removed>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
        aria-hidden="true"
      >
        Oslo
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
        aria-hidden="true"
      >
        Stavanger
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
        aria-hidden="true"
      >
        Trondheim
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
        aria-hidden="true"
      >
        Bergen
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<removed>"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Fetch External 1`] = `
<ds-field lang="en">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Search for countries (in english)
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist8"
      popovertarget=":u-datalist8"
      aria-autocomplete="list"
      aria-controls=":u-datalist8"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d countries"
      data-sr-singular="%d country"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Search for countries (in english)"
      data-floating="bottom"
      style="<removed>"
    >
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`In Details 1`] = `
<details data-variant="default">
  <summary>
    Åpne details som har overflow: clip;
  </summary>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg en destinasjon
      </label>
      <ds-suggestion autofocus>
        <input
          placeholder=" "
          type="text"
          id="<removed>"
          list=":u-datalist11"
          popovertarget=":u-datalist11"
          aria-autocomplete="list"
          aria-controls=":u-datalist11"
          autocomplete="off"
          enterkeyhint="done"
          role="combobox"
          aria-expanded="true"
        >
        <button
          aria-label="Tøm"
          hidden
          type="reset"
          aria-hidden="false"
          tabindex="-1"
        >
        </button>
        <u-datalist
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          popover="manual"
          role="listbox"
          data-sr-of="of"
          tabindex="-1"
          aria-multiselectable="false"
          id="<removed>"
          data-is-floating="true"
          aria-label="Velg en destinasjon"
          data-floating="bottom"
          style="<removed>"
        >
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Sogndal
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Oslo
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Brønnøysund
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Stavanger
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Trondheim
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Bergen
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<removed>"
            aria-hidden="false"
          >
            Lillestrøm
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
</details>
`;

exports[`Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion data-multiple>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      aria-description="No selected"
      list=":u-datalist9"
      popovertarget=":u-datalist9"
      aria-autocomplete="list"
      aria-controls=":u-datalist9"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="true"
      id="<removed>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      type="text"
      id="<removed>"
      list=":u-datalist1"
      popovertarget=":u-datalist1"
      aria-autocomplete="list"
      aria-controls=":u-datalist1"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-expanded="true"
    >
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<removed>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      data-floating="bottom"
      style="<removed>"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<removed>"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;
